--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFundReturn.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/NewFund/NewFundReturn.cshtml
@@ -24,7 +24,7 @@
 						<div class="l-target__name">
 							@if (item.ProductCode != null)
 							{
-								<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.ProductName</a>
+								<a href="@Model.DetailLink?id=@item.ProductCode" class="o-contentLink t-bold u-ellipsis-2" target="_blank">@item.ProductCode @item.FundName</a>
 							}
 							else
 							{
@@ -136,10 +136,10 @@
 				<div class="c-cardTable__content">
 					<ul class="l-collect l-collect--divider@lt">
 						<li class="l-collect__item">
-							@Html.FocusButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
+							@Html.FocusButton(null, item.ProductCode, item.FundName, InvestTypeEnum.Fund, true)
 						</li>
 						<li class="l-collect__item">
-							@Html.CompareButton(null, item.ProductCode, item.ProductName, InvestTypeEnum.Fund, true)
+							@Html.CompareButton(null, item.ProductCode, item.FundName, InvestTypeEnum.Fund, true)
 						</li>
 					</ul>
 				</div>
