Update: 基金ETF優惠標籤－改 span tag

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -1270,7 +1270,7 @@
                                             <% for(var i = 0; i < Tags.length; i++ ) { %>
                                             <li class="l-tag__item">
                                                 <!-- <a href="#" class="o-tag">百元基金</a> -->
-                                                <a href="#" class="o-tag"><%= Tags[i] %></a>
+                                                <span class="o-tag"><%= Tags[i] %></span>
                                             </li>
                                             <% } %>
                                         </ul>
@@ -1397,7 +1397,7 @@
                                             <% for(var i = 0; i < Tags.length; i++ ) { %>
                                             <li class="l-tag__item">
                                                 <!-- <a href="#" class="o-tag">百元基金</a> -->
-                                                <a href="#" class="o-tag"><%= Tags[i] %></a>
+                                                <span class="o-tag"><%= Tags[i] %></span>
                                             </li>
                                             <% } %>
                                         </ul>
@@ -1524,7 +1524,7 @@
                                             <% for(var i = 0; i < Tags.length; i++ ) { %>
                                             <li class="l-tag__item">
                                                 <!-- <a href="#" class="o-tag">百元基金</a> -->
-                                                <a href="#" class="o-tag"><%= Tags[i] %></a>
+                                                <span class="o-tag"><%= Tags[i] %></span>
                                             </li>
                                             <% } %>
                                         </ul>
@@ -1632,7 +1632,7 @@
                                             <% for(var i = 0; i < Tags.length; i++ ) { %>
                                             <li class="l-tag__item">
                                                 <!-- <a href="#" class="o-tag">百元基金</a> -->
-                                                <a href="#" class="o-tag"><%= Tags[i] %></a>
+                                                <span class="o-tag"><%= Tags[i] %></span>
                                             </li>
                                             <% } %>
                                         </ul>
