--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/IndexRecommendation/IndexRecommendation.cshtml
@@ -135,7 +135,7 @@
                                                                 @for (var i = 0; i < item.Tags.Count; i++)
                                                                 {
                                                                     <li class="l-tag__item">
-                                                                        <a href="#" class="o-tag">@item.Tags[i] </a>
+                                                                        <span class="o-tag">@item.Tags[i] </span>
                                                                     </li>
                                                                 }
                                                             </ul>
@@ -326,7 +326,7 @@
                                                                     @for (var i = 0; i < item.ETFDiscountTags.Length; i++)
                                                                     {
                                                                         <li class="l-tag__item">
-                                                                            <a href="#" class="o-tag"> @item.ETFDiscountTags[i]</a>
+                                                                            <span class="o-tag"> @item.ETFDiscountTags[i]</span>
                                                                         </li>
                                                                     }
                                                                 </ul>
