--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRankReturnView.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/PerformanceETFRank/PerformanceEtfRankReturnView.cshtml
@@ -24,7 +24,7 @@
 										@for (var i = 0; i < item.ETFDiscountTags.Length; i++)
 										{
 											<li class="l-tag__item">
-												<a href="#" class="o-tag"> @item.ETFDiscountTags[i]</a>
+												<span class="o-tag"> @item.ETFDiscountTags[i]</span>
 											</li>
 										}
 									</ul>
