--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/DiscountPremium/DiscountPremium.cshtml
@@ -134,7 +134,7 @@
 																	@for (var i = 0; i < item.ETFDiscountTags.Length; i++)
 																	{
 																		<li class="l-tag__item">
-																			<a href="#" class="o-tag"> @item.ETFDiscountTags[i]</a>
+																			<span class="o-tag"> @item.ETFDiscountTags[i]</span>
 																		</li>
 																	}
 																</ul>
