--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HighRatedFund/HighRatedFund.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HighRatedFund/HighRatedFund.cshtml
@@ -135,7 +135,7 @@
 																@for (var i = 0; i < item.Tags.Count; i++)
 																{
 																	<li class="l-tag__item">
-																		<a href="#" class="o-tag">@item.Tags[i] </a>
+																		<span class="o-tag">@item.Tags[i] </span>
 																	</li>
 																}
 															</ul>
