--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundSearch/FundSearch.cshtml
@@ -45,7 +45,7 @@
                                             {
                                                 <div class="l-pickGroup__item">
                                                     <label class="o-btnCheckBox o-btnCheckBox--gn" data-filter-checkbox>
-                                                        <input class="o-btnCheckBox__input" type="checkbox" value="@tag">
+                                                        <input id="hotkeyword-@tag" class="o-btnCheckBox__input" type="checkbox" value="@tag">
                                                         <div class="o-btnCheckBox__text" data-filter-value="@tag"></div>
                                                     </label>
                                                 </div>
@@ -80,7 +80,7 @@
                                                     {
                                                         <div class="l-pickGroup__item">
                                                             <label class="o-btnCheckBox o-btnCheckBox--og" data-filter-checkbox>
-                                                                <input class="o-btnCheckBox__input" type="checkbox" value="@tag">
+                                                                <input id="hotproduct-@tag" class="o-btnCheckBox__input" type="checkbox" value="@tag">
                                                                 <div class="o-btnCheckBox__text" data-filter-value="@tag"></div>
                                                             </label>
                                                         </div>
@@ -94,7 +94,7 @@
                                                     {
                                                         <div class="l-pickGroup__item">
                                                             <label class="o-btnCheckBox o-btnCheckBox--og" data-filter-checkbox>
-                                                                <input class="o-btnCheckBox__input" type="checkbox" value="@tag">
+                                                                <input id="hotproduct-@tag" class="o-btnCheckBox__input" type="checkbox" value="@tag">
                                                                 <div class="o-btnCheckBox__text" data-filter-value="@tag"></div>
                                                             </label>
                                                         </div>
@@ -2226,6 +2226,17 @@
                     }
                 }
             });
+
+            var urlParams = new URLSearchParams(window.location.search);
+            var hotkeyword = DOMPurify.sanitize(urlParams.get('HotKeyWord'));
+            var hotproduct = DOMPurify.sanitize(urlParams.get('HotProduct'));
+
+            if (hotkeyword) {
+                $("#hotkeyword-" + hotkeyword).trigger('click');
+            }
+            else if (hotproduct) {
+                $("#hotproduct-" + hotproduct).trigger('click');
+            }
 
         });
     })(jQuery, window, document);
