--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsDetails.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsDetails.cshtml
@@ -51,7 +51,7 @@
                 <div class="l-flex__item">
                     <!-- [data-popover]: 彈跳視窗功能，值為彈跳視窗的 selector -->
                     <a href="#" class="o-btn o-btn--primary o-btn--icon" data-popover="#popoverInsightNewsShare02">
-                        <img src="@Url.Content("~/themes/images/icons/white/share.svg")" alt="分享">分享
+                        <img src="~/themes/images/icons/white/share.svg" alt="分享">分享
                     </a>
                     <div id="popoverInsightNewsShare02" class="c-popover c-popover--auto u-left">
                         <div class="c-popover__wrap">
