增加 setTimeout 才會正常顯示已選取區塊

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/USStock/USStock.cshtml
@@ -739,10 +739,14 @@
                 
             }
             else if (hotkeyword) {
-                $("#hotkeyword-" + hotkeyword).trigger('click');
+                setTimeout(() => {
+                    $("#hotkeyword-" + hotkeyword).trigger('click');
+                }, 300);          
             }
             else if (hotproduct) {
-                $("#hotproduct-" + hotproduct).trigger('click');
+                setTimeout(() => {
+                    $("#hotproduct-" + hotproduct).trigger('click');
+                }, 300);              
             }
         });
     })(jQuery, window, document);
