--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
@@ -265,7 +265,7 @@
                     <div class="l-filter__tool">
                         <div class="l-filter__total">
                             <div class="o-total">
-                                搜尋<span>9999</span>筆
+                                搜尋<span>@Model.Count</span>筆
                             </div>
                         </div>
                         <div class="l-filter__reset">
@@ -431,56 +431,7 @@
         </div>
     </div>
 </div>
-<div class="l-sharebar">
-    <div class="l-sharebar__wrap">
-        <div class="l-sharebar__content">
-            <div class="l-flex l-flex--inline u-flex-gap-sm">
-                <div class="l-flex__item">
-                    <a href="#" class="o-statusBtn o-statusBtn--btn o-statusBtn--tool" data-after="加入常用" data-text-on="已加入" data-msg="加入常用工具|移出常用工具" data-ia="true" data-ia-tooltip="false"></a>
-                </div>
-                <div class="l-flex__item">
-                    <!-- [data-popover]: 彈跳視窗功能，值為彈跳視窗的 selector -->
-                    <a href="#" class="o-btn o-btn--primary o-btn--icon" data-popover="#popoverInsightNewsShare02">
-                        <img src="~/themes/images/icons/white/share.svg" alt="分享">分享
-                    </a>
-                    <div id="popoverInsightNewsShare02" class="c-popover c-popover--auto u-left">
-                        <div class="c-popover__wrap">
-                            <nav class="c-popover__main">
-                                <ul class="l-flex u-flex-col u-flex-gap-md s4">
-                                    <li class="l-flex__item">
-                                        <a href="https://www.facebook.com/sharer/sharer.php?u=" class="o-social o-social--sm o-social--fb" target="_blank" data-share>
-                                            <span class="u-hidden@mb-only">Facebook</span>
-                                        </a>
-                                    </li>
-                                    <li class="l-flex__item">
-                                        <a href="https://social-plugins.line.me/lineit/share?url=" class="o-social o-social--sm o-social--line" target="_blank" data-share>
-                                            <span class="u-hidden@mb-only">LINE</span>
-                                        </a>
-                                    </li>
-                                    <li class="l-flex__item">
-                                        <div class="l-copy" data-copy>
-                                            <div class="l-copy__action">
-                                                <a href="#" class="o-social o-social--sm o-social--copy" data-copy-action>
-                                                    <span class="u-hidden@mb-only">複製網址</span>
-                                                </a>
-                                            </div>
-                                            <div class="l-copy__msg">
-                                                <div class="o-tooltip o-tooltip--relative o-tooltip--top" data-copy-msg>
-                                                    <div class="o-tooltip__content u-nowrap">已複製</div>
-                                                    <div class="o-tooltip__arrow"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 <script>
     (function ($, window, document) {
         const keywordSearchSampleDate = [{
