移除附件說明

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
@@ -409,19 +409,19 @@
         </div>
     </div>
 </div>
-<div class="c-section">
+<!--<div class="c-section">
     <div class="l-wrap">
         <div class="c-collapse" data-collapse="true">
             <div class="c-collapse__head" data-collapse-button="true">
                 <span>附註</span>
             </div>
             <div class="c-collapse__content" data-collapse-content="true">
-                <div class="c-collapse__inner">
+                <div class="c-collapse__inner">-->
                     <!-- .c-list--num: 純數字樣式
                     .c-list--bracketNum: 數字+刮號樣式
                     .c-list--disc: 實心圓點樣式
                     .c-list--circle: 空心圓點樣式 -->
-                    <ol class="c-list c-list--num">
+                    <!--<ol class="c-list c-list--num">
                         <li>未經合法授權，請勿翻載，本站內容僅供參考，本公司不負任何法律責任。</li>
                         <li>投資人若依此以為買賣依據，須自負盈虧之責。</li>
                         <li>與本網站有關一切糾紛與法律問題，均依中華民國相關法令解釋及適用之。</li>
@@ -430,7 +430,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 <script>
     (function ($, window, document) {
