修改另開視窗

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/News/NewsList.cshtml
@@ -388,7 +388,7 @@
                                     <!-- .u-left@dt-only: 桌機版(@@desktop)置左 -->
                                     <td class="c-cardTable__body u-left@dt-only">
                                         <div class="c-cardTable__content u-line-2@lt-only">
-                                            <a href="@url" class="o-contentLink t-bold u-ellipsis-1@dt-only u-ellipsis-2@lt">@item.PageTitle</a>
+                                            <a href="@url" target="@item.Target" class="o-contentLink t-bold u-ellipsis-1@dt-only u-ellipsis-2@lt">@item.PageTitle</a>
                                         </div>
                                     </td>
                                     <td class="c-cardTable__body" data-card-table-width="1/2">
@@ -417,11 +417,11 @@
             </div>
             <div class="c-collapse__content" data-collapse-content="true">
                 <div class="c-collapse__inner">-->
-                    <!-- .c-list--num: 純數字樣式
-                    .c-list--bracketNum: 數字+刮號樣式
-                    .c-list--disc: 實心圓點樣式
-                    .c-list--circle: 空心圓點樣式 -->
-                    <!--<ol class="c-list c-list--num">
+<!-- .c-list--num: 純數字樣式
+.c-list--bracketNum: 數字+刮號樣式
+.c-list--disc: 實心圓點樣式
+.c-list--circle: 空心圓點樣式 -->
+<!--<ol class="c-list c-list--num">
                         <li>未經合法授權，請勿翻載，本站內容僅供參考，本公司不負任何法律責任。</li>
                         <li>投資人若依此以為買賣依據，須自負盈虧之責。</li>
                         <li>與本網站有關一切糾紛與法律問題，均依中華民國相關法令解釋及適用之。</li>
